--- a/ShuffleboardApplication/ShuffleboardApplication.csproj
+++ b/ShuffleboardApplication/ShuffleboardApplication.csproj
@@ -190,6 +190,14 @@
     <Compile Include="Migrations\201808071636096_wolverine2.Designer.cs">
       <DependentUpon>201808071636096_wolverine2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808072024352_wlvrine3.cs" />
+    <Compile Include="Migrations\201808072024352_wlvrine3.Designer.cs">
+      <DependentUpon>201808072024352_wlvrine3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808072036049_wlvrne4.cs" />
+    <Compile Include="Migrations\201808072036049_wlvrne4.Designer.cs">
+      <DependentUpon>201808072036049_wlvrne4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\MyDBContext.cs" />
@@ -316,6 +324,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808071636096_wolverine2.resx">
       <DependentUpon>201808071636096_wolverine2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808072024352_wlvrine3.resx">
+      <DependentUpon>201808072024352_wlvrine3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808072036049_wlvrne4.resx">
+      <DependentUpon>201808072036049_wlvrne4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
