Update to models and update to player details page

--- a/ShuffleboardApplication/ShuffleboardApplication.csproj
+++ b/ShuffleboardApplication/ShuffleboardApplication.csproj
@@ -198,6 +198,10 @@
     <Compile Include="Migrations\201808072036049_wlvrne4.Designer.cs">
       <DependentUpon>201808072036049_wlvrne4.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808081441533_loganmig6.cs" />
+    <Compile Include="Migrations\201808081441533_loganmig6.Designer.cs">
+      <DependentUpon>201808081441533_loganmig6.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\MyDBContext.cs" />
@@ -331,6 +335,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808072036049_wlvrne4.resx">
       <DependentUpon>201808072036049_wlvrne4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808081441533_loganmig6.resx">
+      <DependentUpon>201808081441533_loganmig6.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
