Added a touranment model, Controller and View

--- a/ShuffleboardApplication/ShuffleboardApplication.csproj
+++ b/ShuffleboardApplication/ShuffleboardApplication.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PlayerController.cs" />
+    <Compile Include="Controllers\TournamentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -198,10 +199,19 @@
     <Compile Include="Migrations\201808072036049_wlvrne4.Designer.cs">
       <DependentUpon>201808072036049_wlvrne4.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808081539101_A.cs" />
+    <Compile Include="Migrations\201808081539101_A.Designer.cs">
+      <DependentUpon>201808081539101_A.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808081555490_B.cs" />
+    <Compile Include="Migrations\201808081555490_B.Designer.cs">
+      <DependentUpon>201808081555490_B.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\MyDBContext.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Tournament.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -295,6 +305,8 @@
     <Content Include="Views\Games\Edit.cshtml" />
     <Content Include="Views\Games\Index.cshtml" />
     <Content Include="Views\Player\Details.cshtml" />
+    <Content Include="Views\Tournament\Index.cshtml" />
+    <Content Include="Views\Tournament\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -331,6 +343,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808072036049_wlvrne4.resx">
       <DependentUpon>201808072036049_wlvrne4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808081539101_A.resx">
+      <DependentUpon>201808081539101_A.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808081555490_B.resx">
+      <DependentUpon>201808081555490_B.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
