--- a/ShuffleboardApplication/ShuffleboardApplication.csproj
+++ b/ShuffleboardApplication/ShuffleboardApplication.csproj
@@ -246,6 +246,8 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <None Include="Properties\PublishProfiles\ShuffleboardApplication - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\ShuffleboardApplication.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
