Added validation for duplicate players

--- a/ShuffleboardApplication/ShuffleboardApplication.csproj
+++ b/ShuffleboardApplication/ShuffleboardApplication.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\201808081441533_loganmig6.Designer.cs">
       <DependentUpon>201808081441533_loganmig6.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808152036134_somemigration.cs" />
+    <Compile Include="Migrations\201808152036134_somemigration.Designer.cs">
+      <DependentUpon>201808152036134_somemigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Game.cs" />
     <Compile Include="Models\MyDBContext.cs" />
@@ -220,9 +224,6 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="ApplicationInsights.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -260,6 +261,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\multi.js" />
+    <Content Include="Scripts\multiselect.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
@@ -310,7 +313,9 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
@@ -344,6 +349,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808081441533_loganmig6.resx">
       <DependentUpon>201808081441533_loganmig6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808152036134_somemigration.resx">
+      <DependentUpon>201808152036134_somemigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
